
	* src/eval.c docs/gnuplot.doc:
	Allow strcol() and shorthand for stringcolumn()

	* src/unset.c (unset_style):
	Add missing command "unset style line <n>".

	* term/gd.trm (PNG_init):
	The color palette indexing of the brush is not necessarily the same as
	that of the main image.  Set initial color index to something invalid so
	that we force an update on first use.  
	Bug #1673316

2007-03-03  Ethan Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL src/version.c configure.in docs/gnuplot.texi:
	Tag and package for release of 4.2 patchlevel 0

	* docs/titlepage.tex: Update

2007-02-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Remove spurious #ifdef that was masking the code to
	allow room for subscripts or superscripts when placing the x-axis label.
	Bug #1669038

2007-02-26  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add mention of "set multiplot title <page-title>".

	* term/metapost.trm: Add missing terminal flag.

2007-02-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (draw_color_smooth_box) src/plot3d.c (eval_3dplots):
	Call setup_tics(COLOR_AXIS, 20) at the same place as setup_tics(...)
	for all other axes. Until now it was called much later during color box
	drawing where it could change the colour axis min or max by rounding it
	to lower/upper tics step.

2007-02-22  sobukus@users.sourceforge.net

	* m4/apha.m4: Fix syntax of configuration test for gcc on alpha

2007-02-21  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/faq-ja.tex: Sync Japanese documentation
	to current version.

2007-02-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_plot): Use the z-averaging also for flushed
	triangles.

2007-02-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Updates in dgrid3d and contours sections.

2007-02-13  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Do not apply log scale range checks to